[package]
name = "dprint-plugin-biome"
version = "0.6.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-biome"
keywords = ["formatting", "formatter", "biome"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-biome"
description = "JavaScript/TypeScript/JSON formatter for dprint via Biome."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
biome_css_formatter = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_css_parser = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_css_syntax = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_diagnostics = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_formatter = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_js_formatter = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_js_parser = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_js_syntax = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_json_formatter = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
biome_json_parser = { git = "https://github.com/biomejs/biome", tag = "cli/v1.9.3" }
dprint-core = { version = "0.67.2", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.9.5"
pretty_assertions = "1.4.0"
serde_json = { version = "1.0" }
