[package]
name = "dprint-plugin-biome"
version = "0.11.12"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-biome"
keywords = ["formatting", "formatter", "biome"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-biome"
description = "JavaScript/TypeScript/JSON formatter for dprint via Biome."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
biome_css_formatter = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_css_parser = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_css_syntax = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_diagnostics = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_formatter = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_graphql_formatter = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_graphql_parser = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_graphql_syntax = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_js_formatter = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_js_parser = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_js_syntax = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_json_formatter = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
biome_json_parser = { git = "https://github.com/biomejs/biome", tag = "@biomejs/biome@2.3.13" }
camino = "1.1.10"
dprint-core = { version = "0.67.4", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.10.1"
pretty_assertions = "1.4.0"
serde_json = { version = "1.0" }
